@@ -14,10 +14,10 @@ index cf76412e2b..c21c8f2bf4 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index b00159e657..daf77e8be7 100644
+index db4347ff00..963cdcc17f 100644
 --- a/Changes
 +++ b/Changes
-@@ -725,11 +725,6 @@ OCaml 5.0
+@@ -729,11 +729,6 @@ OCaml 5.0
    (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
     Xavier Leroy)
  
@@ -29,7 +29,7 @@ index b00159e657..daf77e8be7 100644
  - #11516, #11524: Fix the `deprecated_mutable` attribute.
    (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
  
-@@ -749,6 +744,26 @@ OCaml 5.0
+@@ -753,6 +748,26 @@ OCaml 5.0
    the bug was only present in development version of OCaml 5.
    (Stephen Dolan, report by Andre Maroneze, review by Gabriel Scherer)
  
@@ -56,7 +56,7 @@ index b00159e657..daf77e8be7 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -784,13 +799,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -788,13 +803,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -72,7 +72,7 @@ index b00159e657..daf77e8be7 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -897,6 +912,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -901,6 +916,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10464: Add List.is_empty.
    (Craig Ferguson, review by David Allsopp)
  
@@ -82,7 +82,7 @@ index b00159e657..daf77e8be7 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -1156,6 +1174,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1160,6 +1178,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -10065,7 +10065,7 @@ index 0000000000..113c234ed3
 +     fi
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..8a3e14bf21
+index 0000000000..a6fbcd0279
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,10004 @@
@@ -10085,10 +10085,10 @@ index 0000000000..8a3e14bf21
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index b00159e657..daf77e8be7 100644
++index db4347ff00..963cdcc17f 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -725,11 +725,6 @@ OCaml 5.0
++@@ -729,11 +729,6 @@ OCaml 5.0
 +   (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
 +    Xavier Leroy)
 + 
@@ -10100,7 +10100,7 @@ index 0000000000..8a3e14bf21
 + - #11516, #11524: Fix the `deprecated_mutable` attribute.
 +   (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
 + 
-+@@ -749,6 +744,26 @@ OCaml 5.0
++@@ -753,6 +748,26 @@ OCaml 5.0
 +   the bug was only present in development version of OCaml 5.
 +   (Stephen Dolan, report by Andre Maroneze, review by Gabriel Scherer)
 + 
@@ -10127,7 +10127,7 @@ index 0000000000..8a3e14bf21
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -784,13 +799,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -788,13 +803,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -10143,7 +10143,7 @@ index 0000000000..8a3e14bf21
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -897,6 +912,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -901,6 +916,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10464: Add List.is_empty.
 +   (Craig Ferguson, review by David Allsopp)
 + 
@@ -10153,7 +10153,7 @@ index 0000000000..8a3e14bf21
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -1156,6 +1174,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1160,6 +1178,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
